version 0.3.3 - dd-MMM-yyyy
 . Action: Added CallFuncND. Like CallFuncN but accepts data

version 0.3.2 - 14-Ago-2008
 . Action: Animate was using the wrong index. Possible crash fixed
 . ColorLayer: added support to change width & height at runtime
 . Demos: IntervalDemo using relative path for plist.info file
 . Demos: added filter to TcpAccelClient & Chipmunk_Accel demos (by Brian Hammond)
 . Director: propagates TouchEvents to all registered layers
 . Misc: Removed sound support. Not part of cocos2d
 . Misc: Moved OpenGLSupport inside the cocos2d directory. cocos2d.h includes OpenGLSupport headers
 . Misc: added getCocos2dVersion() function
 . Particles: It was (mistakenly) using Z coordinate
 . Sprite: added setDisplayFrame selector


version 0.3.1 - 30-Jul-2008
 . All: methods that receives target/selector, are named:Target selector (unified API)
 . All: added "cocos2d.h". applications should only import this file.
 . Demos: added resume/pause to application
 . Demos: chipmunk_accel is frame independent
 . Demos: added IntervalDemo demo. Shows how to uses interval timers, and how pause/resume works
 . Demos: removed JumpingSisters demo
 . Demos: new Default.png
 . Director: when paused don't consume CPU. Only renders the screen at 4 FPS.
 . Particles: don't uses draw to update, uses scheduled step. (pause/resume works)
 . Scheduler: added interval timers
 . Transitions: they don't flickr (bug introduced in v0.3.0)
 . Types: created ccTime type (float or double) used to calculate delta time
 . Types: older types have the prefix "cc" (cocos)

 
version 0.3.0 - 27-Jul-2008
 . Actions: they are not cloned. If you want to reuse them, clone them manually using the method 'copy'
 . Actions: CallFunc, CallFuncN using performSelector instead of NSInvocator
 . Actions: added CallFuncN action. First argument is the target node
 . Core: Using own scheduler to schedule timers/etc.
 . Demos: Added OrbitCamera demo in SpritesDemo project